[package]
name = "framework-solve"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
rand = "0.7"
sha2 = "0.10.8"
solana-program = "1.18.26"
# solana-client = "1.18.26"
solana-sdk = "1.18.26"
# spl-token = "4.0.0"
tempfile = "3.14.0"
chall = { path ="../framework/chall/programs/chall", features = ["no-entrypoint"] }
uuid = { version = "1.11.0", features = ["v4"] }
serde_json = "1"
serde = "=1.0.214"
