[package]
name = "framework"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.93"
rand = "0.7"
sha2 = "0.10.8"
# solana-logger = "1.18.26"
solana-program = "1.18.26"
solana-program-test = "1.18.26"
solana-sdk = "1.18.26"
spl-token = "4.0.0"
spl-associated-token-account = "3.0.0"
tempfile = "3.14.0"
chall = { path ="./chall/programs/chall", features = ["no-entrypoint"] }
uuid = { version = "1.11.0", features = ["v4"] }
serde_json = "1"
serde = "=1.0.214"

